--- a/views/user/products.hbs
+++ b/views/user/products.hbs
@@ -35,7 +35,7 @@
 									</select><br>
 									<input name="price" id="price" type="number" class="form-control" placeholder="₦20000"><br>
 									<textarea name="description" id="description" class="form-control" placeholder="description"></textarea><br>
-									<input type="file" name="imagePath" id="imagePath" class="form-control"><br>
+									<!--<input type="file" name="imagePath" id="imagePath" class="form-control"><br>-->
 									<input name="_csrf" type="hidden"  value="{{ csrfToken }}">
 									<button type="submit" id="insertProduct"> Upload </button>
 							</form>
