--- a/views/error.hbs
+++ b/views/error.hbs
@@ -16,7 +16,7 @@
 				<h3>Page you requested is not found on this server, try other options</h3>
 			</div>
 			<h4>Want to signin?</h4>
-			<p><a href="/user/signin">Sign In Here</a> (Or) go back to <a href="/">Home<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></p>
+			<p><a href="/signin">Sign In Here</a> (Or) go back to <a href="/">Home<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></p>
 		</div>
 	</div>
 <!-- //login -->
