--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -2,13 +2,26 @@
 <html lang="en">
 <head>
     <title>{{ title }}</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>WHOGOBUYAM | Online Campus Marketplace</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
-	<meta name="theme-color" content="#56c590">
-	<meta Property="og:description" Content="online marketplace,Used,Clothings, Buy and sell electronics, cars, fashion, Apparel, collectibles,  goods, digital cameras, baby items, and everything else on eBay" />
-    <meta name="description" content="online marketplace,Used,Clothings, Buy and sell electronics, cars, fashion, Apparel, collectibles,  goods, digital cameras, baby items, and everything else on eBay" />
+	<meta name="description" content="online marketplace,Used,Clothings, Buy and sell electronics, cars, fashion, Apparel, collectibles,  goods, digital cameras, baby items, and everything else on eBay" />
 	<meta name="keywords" content="" />
+	<meta name="author" content="freehtml5.co" />
+	<meta property="og:title" content=""/>
+	<meta property="og:image" content=""/>
+	<meta property="og:url" content=""/>
+	<meta property="og:site_name" content=""/>
+	<meta property="og:description" content="online marketplace,Used,Clothings, Buy and sell electronics, cars, fashion, Apparel, collectibles,  goods, digital cameras, baby items, and everything else on eBay"/>
+	<meta name="twitter:title" content="" />
+	<meta name="twitter:image" content="" />
+	<meta name="twitter:url" content="" />
+	<meta name="twitter:card" content="" />
+	<meta name="theme-color" content="#56c590">
+
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 	<link rel="manifest" href="/manifest.json"/>
 	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
