--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,11 +4,10 @@
 			<div class="w3_footer_grids">
 				<div class="col-md-4 w3_footer_grid">
 					<h3>Contact</h3>
-					
 					<ul class="address">
 						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Osun State University, OkeBaale, <span>Osogbo City.</span></li>
 						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@whogobuyam.com">info@whogobuyam.com</a></li>
-						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+234 1567 567</li>
+						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+234 816 942 5505</li>
 					</ul>
 				</div>
 				<div class="col-md-4 w3_footer_grid">
@@ -29,7 +28,7 @@
 						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/signup">Create Account</a></li>
 					</ul>
 				</div>
-				<div class="clearfix"> </div>
+				<div class="clearfix"></div>
 			</div>
 		</div>
 				<div class="footer-copy">
@@ -43,10 +42,9 @@
 			<div class="container">
 				<div class="w3layouts-foot">
 					<ul>
-						<li><a href="#" class="w3_agile_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agile_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="w3_agile_dribble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="w3_agile_vimeo"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
+						<li><a href="www.facebok.com/" class="w3_agile_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><a href="www.twitter.com/" class="agile_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="www.instagram.com/" class="w3_agile_instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="payment-w3ls">	
