--- a/views/user/products.hbs
+++ b/views/user/products.hbs
@@ -21,9 +21,9 @@
 						</li>
 						<li> 
 
-							<form class="addMyProduct" action="/products" method="post">
+							<form class="addMyProduct" id="adda" method="POST">
 									<input name="userId" id="userId" type="hidden" class="form-control" value="{{this.user}}">
-									<input type="text" name="title" id="title" placeholder="Goods name" class="form-control" required><br>
+									<input type="text" name="title" id="title" placeholder="Goods name" class="form-control" ><br>
 									<select name="category" id="category" class="form-control">
 										<option>Automobile</option>
 										<option>Body accessory</option>
@@ -33,11 +33,13 @@
 										<option>Office Appliance</option>
 										<option>Others</option>
 									</select><br>
-									<input name="price" id="price" type="number" class="form-control" placeholder="₦20000"><br>
-									<textarea name="description" id="description" class="form-control" placeholder="description"></textarea><br>
+									<input name="price" id="price" type="number" class="form-control" placeholder="₦20000" ><br>
+									<textarea name="description" id="description" class="form-control" placeholder="description" ></textarea><br>
 									<!--<input type="file" name="imagePath" id="imagePath" class="form-control"><br>-->
 									<input name="_csrf" type="hidden"  value="{{ csrfToken }}">
-									<button type="submit" id="insertProduct"> Upload </button>
+									{{!-- <button type="submit" id="insertProduct"> Upload </button> --}}
+	<button id="changepicture2" style="border: 1px #038bd4 solid; border-radius: 10px; width: 100%" class="btn btn-white">Upload</button>
+
 							</form>
 						</li>
 					</ul>
@@ -106,6 +108,63 @@
 			<div class="clearfix"> </div>
 		</div>
 	</div>
+
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+    document.getElementById("adda").addEventListener("submit", function(e){
+		e.preventDefault();
+		if($('#price').val() === ""){
+			alert("Please fill the price field")
+		}else if($('#description').val() === ""){
+					alert("Please fill the required fields")
+		}else if($('#title').val() === ""){
+					alert("Please fill the required fields")
+			}else{
+        	myWidget.open();
+		}
+    }, false);
+	var imgUrl = "";
+    var myWidget = cloudinary.createUploadWidget({
+            cloudName: 'akin',
+            uploadPreset: 'w75i41lo',
+            maxFiles: 1,
+            autoMinimize: false
+        },
+        (error, result) => {
+            // console.log(error, result)
+            //     console.table(result);
+            if (error){
+                console.log("Error");
+            } else if(result.info.public_id){
+                var sess = "dkdkl";
+                console.log(`Uploaded: ${result.info.public_id}`);
+				imgUrl = "https://res.cloudinary.com/akin/image/upload/v1543417522/"+result.info.public_id;
+                $.ajax({
+                    url: "/products",
+                    data: {
+                        image: "https://res.cloudinary.com/akin/image/upload/v1543417522/"+result.info.public_id,
+                        userId : $('#userId').val(),
+						title : $('#title').val(),
+						description : $('#description').val(),
+						price : $('#price').val(),
+						category : $('#category').val(),
+
+                    },
+                    method: "post",
+                    success: function(r){
+                        console.log("Hell yeah!!! I don dey...")
+                        console.log(r);
+                    },
+                    error: function(e){
+                        console.log("Oponu")
+                    }
+                });
+            }
+        });
+
+
+</script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 
@@ -127,30 +186,6 @@
 				}
 			});
 	});
-	$('.addMyProduct').on('submit',function(e){
-		e.preventDefault();
-		console.log($('#imagePath').val())
-		$.ajax({
-			url: "/products",
-			method: "post",
-			data: $('.addMyProduct').serialize(),
-			beforeSend: function(){
-				console.log("Sending....");
-				$("#insertProduct").html("Sending.....");
-			},
-			success: function(res){
-				alert('done');
-				$("#insertProduct").html("Upload");
-				$("#suc").html('<div class="alert alert-success"><p>Added Successfully</p></div>')
-			},
-			error: function(err){
-				alert("Not Done")
-				$("#suc").html('<div class="alert alert-danger"><p>Error Uploading Product</p></div>')
-				console.log(err);
-				$("#insertProduct").html("Upload");
-
-			}
-		})
-	})
+	
 </script>
 
