--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -45,7 +45,7 @@ a.navbar-list{
 				<h1><a href="/"><img src="images/logo2.png" width="70px" height="70px"/>whogobuyam</a></h1>
 			</div>
 		<div class="w3l_search">
-			<form action="/search" method="get">
+			<form action="/search" method="GET">
 				<input type="search" name="search" id="search" placeholder="Search for a Product..." required>
 				<button type="submit" class="btn btn-default search" aria-label="Left Align">
 					<i class="fa fa-search" aria-hidden="true"> </i>
