--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,8 +1,4 @@
 
-
-
-	
-	
 	<!-- main-slider -->
 		<ul id="demo1">
 			<li>
@@ -27,8 +23,6 @@
 			</li>
 		</ul>
 	<!-- //main-slider -->
-  	<!-- //main-slider -->
-	<!-- //top-header and slider -->
 	<!-- top-brands -->
 	<div class="top-brands">
 		<div class="container">
@@ -37,6 +31,9 @@
 								<p class="w3l-ad" style="color:">
 									We have pulled together our advertised offers into one place, so you won't miss out on any great deal.
 								</p>
+								  <div id="coinName" class="collection">
+                    
+								  </div>
 							</div>
 							<div class="agile_top_brands_grids">
 								{{# each products }}
@@ -48,16 +45,20 @@
 												<figure>
 													<div class="snipcart-item block" >
 														<div class="snipcart-thumb">
-															<a href=""><img title="ankara picture" alt="sAmkara picture 1" width="150px" height="140px" height src="images/ankara1.jpg" /></a>		
-															<p>{{ this.title }}</p>
-															<p>{{ this.description }}</p>
-															<p>Osogbo</p>
+															<a href=""><img title="ankara picture" alt="Ankara_picture" width="150px" height="140px" height src="images/ankara1.jpg" /></a>		
+															<p>My {{ this.title }}</p>
+															<br>
+															<p>Your {{ this.description }}</p>
+															<br>
 															<h4>₦{{ this.price }} </h4>
 														</div>
 														<div class="snipcart-details top_brand_home_details">
 															<form action="#" method="post">
 																<fieldset>
-																	<button type="button" name="submit" value="Contact" class="button btn btn-success" data-toggle="modal" data-target=".modal" style="background-color:#56c590;">Contact</button>
+																	<button type="button" name="contact" id="contact" value="Contact" class="button btn btn-success" style="background-color:#56c590;">
+																		<li>ITem</li>
+																	</button>
+																	{{!-- data-toggle="modal" data-target=".modal" --}}
 																	{{!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Large modal</button> --}}
 																	{{!-- <input type="submit" name="submit" value="Contact" class="button" /> --}}
 																</fieldset>
@@ -95,22 +96,19 @@
 	</div>
 <!--//brands-->
 
-
-
-<!-- Modal -->
+{{!-- <!-- Modal -->
+				
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">{{ this.title }}</h5>
+        <h5 class="modal-title" id="exampleModalCenterTitle">Title</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-				 <p>{{ this.title }}</p>
-			   <p>{{ this.description }}</p>
-			   <h4>${{ this.price }} </h4>
+			   <strong>this.description </strong>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">facebook</button>
@@ -118,4 +116,49 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
+
+
+
+
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+<script>
+
+  $(document).ready(function(){
+    $('.modal').modal();
+  });
+	
+	
+$("#contact").on("click",function(e){
+    var coin = $(this).attr('id');
+    // alert(coin);
+    $("#coinName").html(coin);
+    var sendUrl ="https://api.coinmarketcap.com/v1/ticker/"+ coin +"/";
+    $.ajax({
+        url: sendUrl,
+        dataType: "json",
+        beforeSend: function() {
+    $("#circleloading").show();
+    },
+        success: function(result){
+            $("#circleloading").hide();
+            $("#coinName").html("<center><h4>"+result[0].name+"</h4></center>"+
+            "<p>Price In USD :" + result[0].price_usd+"</p>"+
+            "<p>Price In BTC :" + result[0].price_btc+"</p>"+
+            "<p>24h_volume_usd :" + result[0]["24h_volume_usd"]+"</p>"
+            );
+        },
+        error: function(err){
+            console.log(err);
+        }
+    })
+    $(".modal-footer").on("click","a", function(e){
+        // alert("fired");
+        // $(".modal-content").html("");
+    })
+});
+
+</script>
