--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,4 +1,4 @@
-
+<link	rel='stylesheet' href='/stylesheets/card.css' />
 	<!-- main-slider -->
 		<ul id="demo1">
 			<li>
@@ -31,47 +31,46 @@
 								<p class="w3l-ad" style="color:">
 									We have pulled together our advertised offers into one place, so you won't miss out on any great deal.
 								</p>
-								  <div id="coinName" class="collection">
-                    
-								  </div>
 							</div>
 							<div class="agile_top_brands_grids">
-								{{# each products }}
-								<div class="col-md-4 top_brand_left">
-									{{# each this }}
-									<div class="hover14 column">
-										<div class="agile_top_brand_left_grid">
-											<div class="agile_top_brand_left_grid1">
-												<figure>
-													<div class="snipcart-item block" >
-														<div class="snipcart-thumb">
-															<a href=""><img title="ankara picture" alt="Ankara_picture" width="150px" height="140px" height src="images/ankara1.jpg" /></a>		
-															<p>My {{ this.title }}</p>
-															<br>
-															<p>Your {{ this.description }}</p>
-															<br>
-															<h4>₦{{ this.price }} </h4>
-														</div>
-														<div class="snipcart-details top_brand_home_details">
-															<form action="#" method="post">
-																<fieldset>
-																	<button type="button" name="contact" id="contact" value="Contact" class="button btn btn-success" style="background-color:#56c590;">
-																		<li>ITem</li>
-																	</button>
-																	{{!-- data-toggle="modal" data-target=".modal" --}}
-																	{{!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Large modal</button> --}}
-																	{{!-- <input type="submit" name="submit" value="Contact" class="button" /> --}}
-																</fieldset>
-															</form>
-														</div>
-													</div>
-												</figure>
-											</div>
-										</div>
-									</div><br>
-									{{/each}}
-								</div>
-								{{/each}}
+								<div class="col-md-6 col-md-offset-3">
+									<div class="row">
+					{{# each products }}
+					{{# each this }}
+            <div class="card">
+                <div class="card-image">
+                    <img class="img-responsive" src="images/ankara1.jpg">
+                </div><!-- card image -->
+                <div class="card-content">
+                    <span class="card-title">{{ this.title }}</span>                    
+                    <button type="button" id="show" class="btn btn-tertiary pull-right" aria-label="Left Align">
+                    	  <strong>More Info</strong>
+                        {{!-- <i class="fa fa-ellipsis-v"></i> --}}
+                    </button>
+                </div><!-- card content -->
+                <div class="card-action">
+                    
+                    <a href="#" target="new_blank"><strong style="color: midnightblue">₦{{ this.price }}</strong></a> 
+										<a href="#" target="new_blank">Cloth</a>
+										<a href="#" target="new_blank">Body Accessory</a>
+										<a href="#" target="new_blank">Ankara</a>     
+                </div><!-- card actions -->
+                <div class="card-reveal">
+                    <span class="card-title">Card Title</span> 
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">×</span>
+										</button>
+                    <p>
+											 {{ this.description }}
+											 Here is some more information about this product that is only revealed once clicked on.
+											 {{this.email}},{{this.price}}
+										</p>
+                </div><!-- card reveal -->
+            </div>
+							{{/each}}
+							{{/each}}
+							</div>
+        </div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -79,6 +78,9 @@
 		</div>
 	</div>
 <!-- //top-brands -->
+
+
+
 
 <!--brands-->
 	<div class="brands">
@@ -96,69 +98,7 @@
 	</div>
 <!--//brands-->
 
-{{!-- <!-- Modal -->
-				
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-			   <strong>this.description </strong>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">facebook</button>
-        <button type="button" class="btn btn-primary">twitter</button>
-      </div>
-    </div>
-  </div>
-</div> --}}
 
+	{{!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script> --}}
+	<!-- Latest compiled and minified JavaScript -->
 
-
-
-<script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-<script>
-
-  $(document).ready(function(){
-    $('.modal').modal();
-  });
-	
-	
-$("#contact").on("click",function(e){
-    var coin = $(this).attr('id');
-    // alert(coin);
-    $("#coinName").html(coin);
-    var sendUrl ="https://api.coinmarketcap.com/v1/ticker/"+ coin +"/";
-    $.ajax({
-        url: sendUrl,
-        dataType: "json",
-        beforeSend: function() {
-    $("#circleloading").show();
-    },
-        success: function(result){
-            $("#circleloading").hide();
-            $("#coinName").html("<center><h4>"+result[0].name+"</h4></center>"+
-            "<p>Price In USD :" + result[0].price_usd+"</p>"+
-            "<p>Price In BTC :" + result[0].price_btc+"</p>"+
-            "<p>24h_volume_usd :" + result[0]["24h_volume_usd"]+"</p>"
-            );
-        },
-        error: function(err){
-            console.log(err);
-        }
-    })
-    $(".modal-footer").on("click","a", function(e){
-        // alert("fired");
-        // $(".modal-content").html("");
-    })
-});
-
-</script>
