--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -92,6 +92,7 @@
 				to the other shops is that they sell their products on other platforms.  --}}
 				{{!-- However,we use our website for extra design functionality and to highlight everyone's story
 				So if you have it flaunt it, Also integrate your social media platforms in to your ecommerce website design. --}}
+				<iframe src="https://dev.to/notifications"></iframe>
 			  </p>
 		</div>
 	</div>
