--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -53,6 +53,38 @@
         <script src='/javascripts/move-top.js'></script>
         <script src='/javascripts/responsiveslides.min.js'></script>
         <!-- top-header and slider -->
+
+
+
+
+        		<script type="text/javascript">
+		// function getId(btn_name){
+		// 	console.log("HELLO CONSOLE");
+		// 	$('#'+ btn_name).on('click',function(){        
+		// 		$('.card-reveal').slideToggle('slow');
+		// 	});
+		// 	$('.card-reveal .close').on('click',function(){
+		// 		$('.card-reveal').slideToggle('slow');
+		// 	});
+		// }
+		
+		// $(document).ready(function() {
+		// 	$("button").click(function(event) {
+		// 	  alert(this.id);
+		//       var btn_name = this.id;
+		// 	  console.log(btn_name);
+		// 	  getId(btn_name);
+		// 	});
+		// });
+			
+	</script>
+
+
+
+
+
+
+        
 		<!-- here stars scrolling icon -->
 		<script type="text/javascript">
 		$(document).ready(function() {
@@ -75,15 +107,23 @@
 		</script>	
 		<!-- //main slider-banner --> 
 		<!--//CARD -->
-		<script type="text/javascript">
-		$(function(){
-			$('#show').on('click',function(){        
-				$('.card-reveal').slideToggle('slow');
-			});
-			$('.card-reveal .close').on('click',function(){
-				$('.card-reveal').slideToggle('slow');
-			});
-		});
-	</script>
+
 </body>
 </html>
+
+
+		<!-- 
+			$(document).ready(function() {
+				 $("button").click(function(event) {
+			        alert(this.id);
+		            var btn_name = this.id;
+			        // alert(event.target.id);
+			        console.log(btn_name);
+			        $('#'+ btn_name).on('click',function(){        
+						$('.card-reveal').slideToggle('slow');
+					});
+					$('.card-reveal .close').on('click',function(){
+						$('.card-reveal').slideToggle('slow');
+					});
+			    });
+		    }); -->
