--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -59,7 +59,7 @@ a.navbar-list{
 <!-- //header -->
 
 <!-- navigation -->
-	<div class="navigation-agileits">
+	<div class="navigation-agileit fixed">
 		<div class="container">
 			<nav class="navbar navbar-default">
 							<!-- Brand and toggle get grouped for better mobile display -->
