--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -44,10 +44,11 @@
 										</div><!-- card image -->
 										<div class="card-content">
 											<span class="card-title">{{ this.title }}</span>                    
-											<button type="button" id="show" class="btn btn-tertiary pull-right" aria-label="Left Align">
+											<button type="button" id="btn_{{@index}}" class="btn btn-tertiary pull-right" data-toggle="modal" data-target="#myModal{{@index}}" aria-label="Left Align"> <!-- id="show" -->
 												<strong>More Info</strong>
 												{{!-- <i class="fa fa-ellipsis-v"></i> --}}
 											</button>
+											<!-- <button type="button" data-toggle="modal" data-target="#myModal{{@index}}">Open Modal</button> -->
 										</div><!-- card content -->
 										<div class="card-action">
 													<a href="#" target="new_blank"><strong style="color: midnightblue">₦{{ this.price }}</strong></a> 
@@ -56,10 +57,11 @@
 													<a href="#" target="new_blank">Ankara</a>     
 										</div><!-- card actions -->
 										<div class="card-reveal">
-											<span class="card-title">Card Title</span> 
+											<span class="card-title">{{ this.title }}</span> 
 											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 												<span aria-hidden="true">×</span>
 											</button>
+
 											<p>
 												{{ this.description }}
 												Here are some more information about {{ this.title }} that is only revealed once clicked on.
@@ -67,6 +69,34 @@
 											</p>
 										</div><!-- card reveal -->
 									</div>
+
+
+									  
+
+
+									<!-- Modal -->
+  <div class="modal fade" id="myModal{{@index}}" role="dialog">
+    <div class="modal-dialog">
+ 
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title"><strong>{{ this.title }}</strong></h4>
+        </div>
+        <div class="modal-body">
+          <p>
+          	₦{{ this.price }}
+          	<span>{{ this.description }}</span>
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
 								{{/each}}<br />
 						{{/each}}
 							</div>
@@ -92,7 +122,6 @@
 				to the other shops is that they sell their products on other platforms.  --}}
 				{{!-- However,we use our website for extra design functionality and to highlight everyone's story
 				So if you have it flaunt it, Also integrate your social media platforms in to your ecommerce website design. --}}
-				<iframe src="https://dev.to/notifications"></iframe>
 			  </p>
 		</div>
 	</div>
@@ -101,4 +130,7 @@
 
 	{{!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script> --}}
 	<!-- Latest compiled and minified JavaScript -->
+	<script type="text/javascript">
+		
+</script>
 
